--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                     const listItem = createHTMLElement("div", "", "", "", "listItem", listArea);
 					const EditPic = createHTMLElement("img", "", "", "", "", listItem, function() {
 						editPageContents(pageName, pageArea);
-						togglePanel();
+						togglePannel()
 					});
 					EditPic.src = "https://www.clarkeharrison.co.uk/Assets/edit.png";
                     const itemText = createHTMLElement("div", pageName, "", "", "", listItem, function() {
@@ -431,6 +431,7 @@
         </script>
     </body>
 </html>
+
 
 
 
